<resources>
    <string name="app_name">ListDisplay</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">ListDisplay</string>
    <string name="iBox">Incomplete</string>
    <string name="cBox">Complete</string>
    <string name="complete_list">Complete List</string>
    <string name="incomplete_list">Incomplete List</string>
    <string name="edit_title">Edit the Lists</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="clear_edit">Clear</string>
    <string name="long_click_text">Long Click to Switch Between Lists!</string>
    <string name="not_available">NOT AVAILABLE!</string>
    <string name="iBox2">Incomplete</string>
    <string name="cBox2">Complete</string>
    <string name="desc_not_available">DESCRIPTION UNAVAILABLE!</string>
    <string name="save_text">SAVE</string>
    <string name="exit_text">EXIT</string>
    <string name="bucketlist_string">UVA Bucket List</string>


</resources>
