<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:layout_marginRight="10dip"
    android:layout_marginLeft="10dip"
    android:configChanges="keyboardHidden|orientation"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/not_available"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_not_available"
        android:id="@+id/textView7" />

    <CheckBox android:id="@+id/checkbox_iBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iBox2"/>

    <CheckBox android:id="@+id/checkbox_cBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cBox2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/exit_text"
            android:id="@+id/button4"
            android:layout_weight=".5"
            android:onClick="exitInfo" />

        <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:id="@+id/button5"
            android:layout_weight=".5"
            android:onClick="saveInfo" />
        />

    </LinearLayout>

</LinearLayout>